--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "web_app",
-    "short_name": "web_app",
+    "name": "bwr_app",
+    "short_name": "bwr_app",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
